--- a/app/src/main/res/menu/menu_opciones.xml
+++ b/app/src/main/res/menu/menu_opciones.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <item
-        android:id="@+id/itm_search"
-        android:title="@string/search"
-        android:icon="@drawable/search"
+        android:id="@+id/itm_share"
+        android:title="@string/share"
+        android:icon="@drawable/share"
         app:showAsAction="ifRoom"/>
 </menu>
