--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,9 +56,41 @@ tools:context="com.athena.quizcarlosibarrai077117.MainActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="100dp"
             android:orientation="horizontal"
-            android:weightSum="3">
+            android:weightSum="2">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+                <TextView
+                    android:id="@+id/ingreso1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ingresos"
+                    android:textColor="@color/colorSubText"
+                    android:layout_above="@id/valor2" />
+
+                <TextView
+                    android:id="@+id/valor2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="$1.173.000"
+                    android:layout_centerInParent="true"
+                    android:textColor="@android:color/holo_blue_dark"
+                    android:textSize="20dp"/>
+
+                <TextView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="+13%"
+                    android:layout_toRightOf="@id/ingreso1"
+                    android:layout_above="@id/valor2"
+                    android:background="@drawable/borde1"/>
+
+            </RelativeLayout>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -86,21 +118,64 @@ tools:context="com.athena.quizcarlosibarrai077117.MainActivity">
                     android:layout_height="wrap_content"
                     android:text="+13%"
                     android:layout_toRightOf="@id/ingreso"
-                    android:layout_above="@id/valor1"/>
+                    android:layout_above="@id/valor1"
+                    android:background="@drawable/borde1"/>
 
             </RelativeLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-            </View>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1>
-            </RelativeLayout>
+
+
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@color/colorGray">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/transacciones"
+                android:layout_weight="1"
+                android:layout_margin="10dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/mas"
+                android:layout_margin="10dp"
+                />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/arrow"
+                android:layout_margin="10dp"/>
+        </LinearLayout>
+
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                        </RelativeLayout>
+
+
+                    </LinearLayout>
+
+                </LinearLayout>
+            </ScrollView>
 
     </LinearLayout>
 
